Fix alignment and style of code blocks
Pandoc wraps code blocks in a <div> only when the code has syntax
highlighting applied. This <div> should not make any difference to the
final lay-out. Also fix baseline alignment of code blocks after removing
the style for this <div>.

--- a/templates/post.css
+++ b/templates/post.css
@@ -173,12 +173,7 @@ code
   font-family: Inconsolata, Consolas, monospace;
 }
 
-div.sourceCode
-{
-  overflow: hidden;
-}
-
-pre.sourceCode
+pre
 {
   /* The bottom of the block is baseline-aligned. The top is not, but the space
    * between the top and the text baseline and between the bottom and the
@@ -186,9 +181,10 @@ pre.sourceCode
    * baseline by 0.7em (half a line height). */
   background-color: #eee;
   border-left: 0.25em solid #c36;
-  margin-bottom: 0.7em;
+  margin-bottom: 0.6em;
   margin-top: 0.2em;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   padding-bottom: 0.9em;
   padding-left: 1.4em;
   padding: 1em;
